# pkg/api/v1/message/analytics.pb.validate.go
@@ -1,0 +1,470 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: message/analytics.proto
+
+package message
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on GetTaskDashboardKPIRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetTaskDashboardKPIRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetTaskDashboardKPIRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetTaskDashboardKPIRequestMultiError, or nil if none found.
+func (m *GetTaskDashboardKPIRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetTaskDashboardKPIRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.PeriodFrom != nil {
+
+		if all {
+			switch v := interface{}(m.GetPeriodFrom()).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetTaskDashboardKPIRequestValidationError{
+						field:  "PeriodFrom",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetTaskDashboardKPIRequestValidationError{
+						field:  "PeriodFrom",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(m.GetPeriodFrom()).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetTaskDashboardKPIRequestValidationError{
+					field:  "PeriodFrom",
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if m.PeriodTo != nil {
+
+		if all {
+			switch v := interface{}(m.GetPeriodTo()).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetTaskDashboardKPIRequestValidationError{
+						field:  "PeriodTo",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetTaskDashboardKPIRequestValidationError{
+						field:  "PeriodTo",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(m.GetPeriodTo()).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetTaskDashboardKPIRequestValidationError{
+					field:  "PeriodTo",
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return GetTaskDashboardKPIRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetTaskDashboardKPIRequestMultiError is an error wrapping multiple
+// validation errors returned by GetTaskDashboardKPIRequest.ValidateAll() if
+// the designated constraints aren't met.
+type GetTaskDashboardKPIRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetTaskDashboardKPIRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetTaskDashboardKPIRequestMultiError) AllErrors() []error { return m }
+
+// GetTaskDashboardKPIRequestValidationError is the validation error returned
+// by GetTaskDashboardKPIRequest.Validate if the designated constraints aren't met.
+type GetTaskDashboardKPIRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetTaskDashboardKPIRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetTaskDashboardKPIRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetTaskDashboardKPIRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetTaskDashboardKPIRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetTaskDashboardKPIRequestValidationError) ErrorName() string {
+	return "GetTaskDashboardKPIRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetTaskDashboardKPIRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetTaskDashboardKPIRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetTaskDashboardKPIRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetTaskDashboardKPIRequestValidationError{}
+
+// Validate checks the field values on GetTaskDashboardKPIResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetTaskDashboardKPIResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetTaskDashboardKPIResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetTaskDashboardKPIResponseMultiError, or nil if none found.
+func (m *GetTaskDashboardKPIResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetTaskDashboardKPIResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for ActiveTasksCount
+
+	// no validation rules for CompletedInPeriod
+
+	// no validation rules for CreatedInPeriod
+
+	if m.CompletedToCreatedRatio != nil {
+		// no validation rules for CompletedToCreatedRatio
+	}
+
+	if m.TopExecutor != nil {
+
+		if all {
+			switch v := interface{}(m.GetTopExecutor()).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetTaskDashboardKPIResponseValidationError{
+						field:  "TopExecutor",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetTaskDashboardKPIResponseValidationError{
+						field:  "TopExecutor",
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(m.GetTopExecutor()).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetTaskDashboardKPIResponseValidationError{
+					field:  "TopExecutor",
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return GetTaskDashboardKPIResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetTaskDashboardKPIResponseMultiError is an error wrapping multiple
+// validation errors returned by GetTaskDashboardKPIResponse.ValidateAll() if
+// the designated constraints aren't met.
+type GetTaskDashboardKPIResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetTaskDashboardKPIResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetTaskDashboardKPIResponseMultiError) AllErrors() []error { return m }
+
+// GetTaskDashboardKPIResponseValidationError is the validation error returned
+// by GetTaskDashboardKPIResponse.Validate if the designated constraints
+// aren't met.
+type GetTaskDashboardKPIResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetTaskDashboardKPIResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetTaskDashboardKPIResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetTaskDashboardKPIResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetTaskDashboardKPIResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetTaskDashboardKPIResponseValidationError) ErrorName() string {
+	return "GetTaskDashboardKPIResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetTaskDashboardKPIResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetTaskDashboardKPIResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetTaskDashboardKPIResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetTaskDashboardKPIResponseValidationError{}
+
+// Validate checks the field values on
+// GetTaskDashboardKPIResponse_TopExecutorByCompleted with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// first error encountered is returned, or nil if there are no violations.
+func (m *GetTaskDashboardKPIResponse_TopExecutorByCompleted) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on
+// GetTaskDashboardKPIResponse_TopExecutorByCompleted with the rules defined
+// in the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in
+// GetTaskDashboardKPIResponse_TopExecutorByCompletedMultiError, or nil if
+// none found.
+func (m *GetTaskDashboardKPIResponse_TopExecutorByCompleted) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetTaskDashboardKPIResponse_TopExecutorByCompleted) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for ExecutorId
+
+	// no validation rules for ExecutorName
+
+	// no validation rules for CompletedTasks
+
+	if len(errors) > 0 {
+		return GetTaskDashboardKPIResponse_TopExecutorByCompletedMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetTaskDashboardKPIResponse_TopExecutorByCompletedMultiError is an error
+// wrapping multiple validation errors returned by
+// GetTaskDashboardKPIResponse_TopExecutorByCompleted.ValidateAll() if the
+// designated constraints aren't met.
+type GetTaskDashboardKPIResponse_TopExecutorByCompletedMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetTaskDashboardKPIResponse_TopExecutorByCompletedMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetTaskDashboardKPIResponse_TopExecutorByCompletedMultiError) AllErrors() []error { return m }
+
+// GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError is the
+// validation error returned by
+// GetTaskDashboardKPIResponse_TopExecutorByCompleted.Validate if the
+// designated constraints aren't met.
+type GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError) Field() string {
+	return e.field
+}
+
+// Reason function returns reason value.
+func (e GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError) Reason() string {
+	return e.reason
+}
+
+// Cause function returns cause value.
+func (e GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError) Cause() error {
+	return e.cause
+}
+
+// Key function returns key value.
+func (e GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError) ErrorName() string {
+	return "GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetTaskDashboardKPIResponse_TopExecutorByCompleted.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetTaskDashboardKPIResponse_TopExecutorByCompletedValidationError{}
